FIX: Overflow fixed in banner

--- a/src/app/modules/home/components/home/home.scss
+++ b/src/app/modules/home/components/home/home.scss
@@ -8,7 +8,7 @@
     padding: 10px;
     box-sizing: border-box;
     height: 100vh;
-
+    overflow: hidden;
     background:
         linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
         url('../../../../../../public/images/banner.JPG');
@@ -137,9 +137,11 @@
     .future {
         height: 100vh;
     }
+
     .timeline {
         background-color: rgb(34, 0, 0)
     }
+
     .contact {
         background-color: rgb(0, 34, 25);
     }
